# felix-agent-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yml
examples/: 01_hello_world.py  02_research_workflow.py  03_custom_workflow.py  04_memory_persistence.py  06_event_system.py  07_streaming_output.py  08_dynamic_spawning.py  09_structured_logging.py  _mock.py
examples/05_deep_research_live/: README.md  _mock_research.py  helix_visualizer.py  run.py
examples/10_yaml_workflow/: README.md  felix.yaml
src/felix_agent_sdk/: __init__.py
src/felix_agent_sdk/agents/: __init__.py  base.py  factory.py  llm_agent.py  specialized.py
src/felix_agent_sdk/cli/: __init__.py  init_command.py  main.py  run_command.py  yaml_loader.py
src/felix_agent_sdk/communication/: __init__.py  central_post.py  messages.py  registry.py  spoke.py
src/felix_agent_sdk/core/: __init__.py  helix.py
src/felix_agent_sdk/events/: __init__.py  bus.py  mixins.py  types.py
tests/: conftest.py
tests/integration/: conftest.py  test_deep_research_demo.py  test_providers.py  test_workflow_pipeline.py
tests/unit/: test_agent_base.py  test_agent_factory.py  test_anthropic_provider.py  test_backends.py  test_base_provider.py  test_central_post.py  test_cli.py  test_communication_registry.py  test_compression.py  test_confidence_monitor.py  test_content_analyzer.py  test_context_builder.py  test_dynamic_spawner.py  test_errors.py  test_events.py  test_helix.py  test_helix_visualizer.py  test_knowledge_store.py  test_llm_agent.py  test_llm_agent_streaming.py  test_local_provider.py  test_logging.py  test_messages.py  test_openai_provider.py  test_registry.py  test_specialized_agents.py  test_spoke.py  test_streaming.py  test_synthesizer.py  test_task_memory.py  test_team_size_optimizer.py  test_token_budget.py  test_workflow_config.py  test_workflow_events.py
(+41 files in other folders)
